mise en place de toute les photos,corrections des faute , alignemet et mise ne place de toutes les photos pour les seances energetique, ajout du surlignement lors du passage de la souris  sur la photo et ajout de la photo valerie sur la premiere page

--- a/css/main.css
+++ b/css/main.css
@@ -103,6 +103,15 @@ section {
     flex-direction: row;
     font-size: 1.4em;
 }
+#page_1 img{
+   
+    overflow:hidden;
+    -webkit-border-radius:50px;
+    -moz-border-radius:50px;
+    border-radius:100px;
+    width:145px;
+    height:213px;
+}
 
 #messageMilieu{
     display: flex;
